--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   firebase_core: ^1.3.0
   firebase_auth: ^2.0.0
   google_sign_in: ^5.0.4
+  font_awesome_flutter: ^9.1.0
+  provider: ^5.0.0
   cloud_firestore: ^2.3.0
   form_field_validator: ^1.1.0
 
@@ -52,6 +54,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/signin.png
+    - assets/google.jpg
+    - assets/google.png
+    - assets/mail.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
